// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Body1 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
}

<div>
  <p
    class="c0"
  >
    Test
  </p>
</div>
`;

exports[`Typography Body2 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
}

<div>
  <p
    class="c0"
  >
    Test
  </p>
</div>
`;

exports[`Typography H1 should match snapshot 1`] = `
.c0 {
  font-family: Source Serif Pro;
  font-style: normal;
  font-weight: bold;
  font-size: 96px;
}

<div>
  <h1
    class="c0"
  >
    Test
  </h1>
</div>
`;

exports[`Typography H2 should match snapshot 1`] = `
.c0 {
  font-family: Source Serif Pro;
  font-style: normal;
  font-weight: bold;
  font-size: 60px;
}

<div>
  <h2
    class="c0"
  >
    Test
  </h2>
</div>
`;

exports[`Typography H3 should match snapshot 1`] = `
.c0 {
  font-family: Source Serif Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 48px;
}

<div>
  <h3
    class="c0"
  >
    Test
  </h3>
</div>
`;

exports[`Typography H4 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 34px;
}

<div>
  <h4
    class="c0"
  >
    Test
  </h4>
</div>
`;

exports[`Typography H5 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 24px;
}

<div>
  <h5
    class="c0"
  >
    Test
  </h5>
</div>
`;

exports[`Typography H6 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
}

<div>
  <h6
    class="c0"
  >
    Test
  </h6>
</div>
`;

exports[`Typography Subtitle1 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
}

<div>
  <h6
    class="c0"
  >
    Test
  </h6>
</div>
`;

exports[`Typography Subtitle2 should match snapshot 1`] = `
.c0 {
  font-family: Source Sans Pro;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
}

<div>
  <h6
    class="c0"
  >
    Test
  </h6>
</div>
`;
